[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/dreamscape/MainMenu/NewGame.gd" type="Script" id=1]
[ext_resource path="res://src/dreamscape/MainMenu/Archetype.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/dreamscape/MainMenu/StartingCards.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/dreamscape/MainMenu/TagsList.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/dreamscape/MainMenu/ArtifactsList.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/dreamscape/MainMenu/DifficultyMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/icons/GUI/difficulty_1.png" type="Texture" id=7]
[ext_resource path="res://themes/darktheme/StyleBox/Opaque.tres" type="StyleBox" id=9]

[node name="NewGame" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1448.0
margin_bottom = 893.0
expand = true
stretch_mode = 6

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1448.0
margin_bottom = 893.0

[node name="Title" type="Label" parent="VBC"]
margin_right = 1441.0
margin_bottom = 14.0
text = "New Game"
align = 1

[node name="MarginUp" type="Control" parent="VBC"]
margin_top = 18.0
margin_right = 1441.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 50 )

[node name="DeckChooseLabel" type="Label" parent="VBC"]
margin_top = 72.0
margin_right = 1441.0
margin_bottom = 86.0
text = "Choose Dreamer Aspects"
align = 1

[node name="CC" type="CenterContainer" parent="VBC"]
margin_top = 90.0
margin_right = 1441.0
margin_bottom = 498.0

[node name="Choices" type="HBoxContainer" parent="VBC/CC"]
margin_left = 150.0
margin_right = 1290.0
margin_bottom = 408.0
custom_constants/separation = 20

[node name="Ego" type="VBoxContainer" parent="VBC/CC/Choices"]
margin_right = 270.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="VBC/CC/Choices/Ego"]
margin_right = 270.0
margin_bottom = 14.0
text = "Ego"
align = 1

[node name="MC" type="MarginContainer" parent="VBC/CC/Choices/Ego"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 408.0
mouse_filter = 1

[node name="Ego" type="Button" parent="VBC/CC/Choices/Ego/MC"]
margin_right = 270.0
margin_bottom = 390.0
rect_min_size = Vector2( 270, 390 )
text = "Choose Ego"

[node name="Icon" type="TextureRect" parent="VBC/CC/Choices/Ego/MC"]
visible = false
margin_right = 270.0
margin_bottom = 390.0
mouse_filter = 2
expand = true
stretch_mode = 7

[node name="Disposition" type="VBoxContainer" parent="VBC/CC/Choices"]
margin_left = 290.0
margin_right = 560.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="VBC/CC/Choices/Disposition"]
margin_right = 270.0
margin_bottom = 14.0
text = "Disposition"
align = 1

[node name="MC" type="MarginContainer" parent="VBC/CC/Choices/Disposition"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 408.0
mouse_filter = 1

[node name="Disposition" type="Button" parent="VBC/CC/Choices/Disposition/MC"]
margin_right = 270.0
margin_bottom = 390.0
rect_min_size = Vector2( 270, 390 )
text = "Choose Disposition"

[node name="Icon" type="TextureRect" parent="VBC/CC/Choices/Disposition/MC"]
visible = false
margin_right = 270.0
margin_bottom = 390.0
mouse_filter = 2
expand = true
stretch_mode = 7

[node name="Instrument" type="VBoxContainer" parent="VBC/CC/Choices"]
margin_left = 580.0
margin_right = 850.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="VBC/CC/Choices/Instrument"]
margin_right = 270.0
margin_bottom = 14.0
text = "Instrument"
align = 1

[node name="MC" type="MarginContainer" parent="VBC/CC/Choices/Instrument"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 408.0
mouse_filter = 1

[node name="Instrument" type="Button" parent="VBC/CC/Choices/Instrument/MC"]
margin_right = 270.0
margin_bottom = 390.0
rect_min_size = Vector2( 270, 390 )
text = "Choose Instrument"

[node name="Icon" type="TextureRect" parent="VBC/CC/Choices/Instrument/MC"]
visible = false
margin_right = 270.0
margin_bottom = 390.0
mouse_filter = 2
expand = true
stretch_mode = 7

[node name="Injustice" type="VBoxContainer" parent="VBC/CC/Choices"]
margin_left = 870.0
margin_right = 1140.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="VBC/CC/Choices/Injustice"]
margin_right = 270.0
margin_bottom = 14.0
text = "Injustice"
align = 1

[node name="MC" type="MarginContainer" parent="VBC/CC/Choices/Injustice"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 408.0
mouse_filter = 1

[node name="Injustice" type="Button" parent="VBC/CC/Choices/Injustice/MC"]
margin_right = 270.0
margin_bottom = 390.0
rect_min_size = Vector2( 270, 390 )
text = "Choose Injustice"

[node name="Icon" type="TextureRect" parent="VBC/CC/Choices/Injustice/MC"]
visible = false
margin_right = 270.0
margin_bottom = 390.0
mouse_filter = 2
expand = true
stretch_mode = 7

[node name="Tween" type="Tween" parent="VBC/CC/Choices"]

[node name="MarginDown" type="Control" parent="VBC"]
margin_top = 502.0
margin_right = 1441.0
margin_bottom = 552.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlButtons" type="CenterContainer" parent="VBC"]
margin_top = 556.0
margin_right = 1441.0
margin_bottom = 816.0

[node name="VBC" type="VBoxContainer" parent="VBC/ControlButtons"]
margin_left = 518.0
margin_right = 922.0
margin_bottom = 260.0
custom_constants/separation = 20

[node name="HBC" type="HBoxContainer" parent="VBC/ControlButtons/VBC"]
margin_right = 404.0
margin_bottom = 50.0

[node name="StartingCards" type="Button" parent="VBC/ControlButtons/VBC/HBC"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
disabled = true
text = "See Starting Cards"

[node name="Randomize" type="Button" parent="VBC/ControlButtons/VBC/HBC"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Randomize"

[node name="Difficulty" type="Button" parent="VBC/ControlButtons/VBC"]
margin_top = 70.0
margin_right = 404.0
margin_bottom = 120.0
rect_min_size = Vector2( 400, 50 )
text = "Change Difficulty"
icon = ExtResource( 7 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBC/ControlButtons/VBC"]
margin_top = 140.0
margin_right = 404.0
margin_bottom = 190.0
rect_min_size = Vector2( 400, 50 )
disabled = true
text = "Start Game"

[node name="Back" type="Button" parent="VBC/ControlButtons/VBC"]
margin_top = 210.0
margin_right = 404.0
margin_bottom = 260.0
rect_min_size = Vector2( 400, 50 )
text = "Back"

[node name="ChoicePopup" type="PopupPanel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1448.0
margin_bottom = 893.0
custom_styles/panel = ExtResource( 9 )

[node name="CC" type="CenterContainer" parent="ChoicePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="ChoicePopup/CC"]
margin_left = 318.0
margin_top = 2.0
margin_right = 1118.0
margin_bottom = 880.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="ChoicePopup/CC/VBC"]
margin_right = 800.0
margin_bottom = 14.0
text = "Choose Type"
align = 1

[node name="Tags" parent="ChoicePopup/CC/VBC" instance=ExtResource( 4 )]
margin_top = 18.0
margin_right = 800.0
margin_bottom = 98.0

[node name="Curios" parent="ChoicePopup/CC/VBC" instance=ExtResource( 5 )]
margin_top = 102.0
margin_right = 800.0
margin_bottom = 182.0

[node name="CC" type="CenterContainer" parent="ChoicePopup/CC/VBC"]
margin_top = 186.0
margin_right = 800.0
margin_bottom = 576.0

[node name="ChoiceContainer" type="GridContainer" parent="ChoicePopup/CC/VBC/CC"]
margin_left = 265.0
margin_right = 535.0
margin_bottom = 390.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 5

[node name="Archetype" parent="ChoicePopup/CC/VBC/CC/ChoiceContainer" instance=ExtResource( 2 )]

[node name="StartingCardsLabel" type="Label" parent="ChoicePopup/CC/VBC"]
margin_top = 580.0
margin_right = 800.0
margin_bottom = 594.0
text = "Starting Cards"
align = 1

[node name="StartginCardsDisplay" parent="ChoicePopup/CC/VBC" instance=ExtResource( 3 )]
margin_top = 598.0
margin_right = 800.0
margin_bottom = 878.0
rect_min_size = Vector2( 800, 280 )

[node name="StartingCardsPopup" type="PopupPanel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1448.0
margin_bottom = 893.0

[node name="VBC" type="VBoxContainer" parent="StartingCardsPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1437.0
margin_bottom = 882.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tags" parent="StartingCardsPopup/VBC" instance=ExtResource( 4 )]
margin_right = 1433.0
margin_bottom = 80.0

[node name="Curios" parent="StartingCardsPopup/VBC" instance=ExtResource( 5 )]
visible = false

[node name="StartingCards" parent="StartingCardsPopup/VBC" instance=ExtResource( 3 )]
margin_top = 84.0
margin_right = 1433.0
margin_bottom = 364.0
rect_min_size = Vector2( 0, 280 )

[node name="DifficultiesPopup" type="PopupPanel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1448.0
margin_bottom = 893.0

[node name="DifficultyMenu" parent="DifficultiesPopup" instance=ExtResource( 6 )]
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="pressed" from="VBC/ControlButtons/VBC/HBC/StartingCards" to="." method="_on_StartingCards_pressed"]
[connection signal="pressed" from="VBC/ControlButtons/VBC/HBC/Randomize" to="." method="_on_Randomize_pressed"]
[connection signal="pressed" from="VBC/ControlButtons/VBC/Difficulty" to="." method="_on_Difficulty_pressed"]
[connection signal="pressed" from="VBC/ControlButtons/VBC/Start" to="." method="_on_Start_pressed"]
[connection signal="popup_hide" from="ChoicePopup" to="." method="_on_popup_hide"]
[connection signal="popup_hide" from="StartingCardsPopup" to="." method="_on_popup_hide"]
